--- a/requirements.txt
+++ b/requirements.txt
@@ -5,7 +5,9 @@ Django==5.0
 django-cors-headers==4.3.1
 djangorestframework==3.14.0
 Faker==22.0.0
+gunicorn==23.0.0
 idna==3.10
+packaging==25.0
 python-dateutil==2.8.2
 pytz==2024.1
 requests==2.32.5
